syntax = "proto3";
import "models.proto";

service Sessions {
  // create
  rpc create(ICreateSession) returns (Session);

  // verify
  rpc verify(IVerifySession) returns (Account);

  // delete
  rpc deleteOne(IDeleteSessionOne) returns (Empty);
  rpc deleteAll(IDeleteSessionAll) returns (Empty);
}


message Session {
  string sessionId = 1;
  string createdAt = 100;
}

// input
message IVerifySession {
  string sessionId = 1;
  map<string, bool> permission = 2;
}

message ICreateSession {
  map<string, string> identifier = 1;
  map<string, string> verifier = 2;
  map<string, bool> permission = 3;
}

message IDeleteSessionOne {
  string sessionId = 1;
}

message IDeleteSessionAll {
  string accountId = 1;
}
